Add OG image fixes (png + jpg fallback), SEO tags, Netlify headers and redirects

--- a/index.html
+++ b/index.html
@@ -19,18 +19,31 @@
     <meta property="og:url" content="https://doc-scan-ai.netlify.app/" />
     <meta property="og:title" content="Doc Scan Lite - AI-Powered Document Scanner" />
     <meta property="og:description" content="Upload PDFs or images and extract key information using AI. Supports driver licenses, certificates, and insurance documents. All data stored locally in your browser." />
-    <meta property="og:image" content="https://doc-scan-ai.netlify.app/og-image.png" />
+
+    <!-- PNG -->
+    <meta property="og:image" content="https://doc-scan-ai.netlify.app/og-image.png?v=2" />
+    <meta property="og:image:secure_url" content="https://doc-scan-ai.netlify.app/og-image.png?v=2" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:alt" content="Doc Scan Lite logo and tagline" />
+
+    <!-- JPG fallback -->
+    <meta property="og:image" content="https://doc-scan-ai.netlify.app/og-image.jpg?v=2" />
+    <meta property="og:image:secure_url" content="https://doc-scan-ai.netlify.app/og-image.jpg?v=2" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:alt" content="Doc Scan Lite logo and tagline" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://doc-scan-ai.netlify.app/" />
     <meta property="twitter:title" content="Doc Scan Lite - AI-Powered Document Scanner" />
     <meta property="twitter:description" content="Upload PDFs or images and extract key information using AI. Supports driver licenses, certificates, and insurance documents. All data stored locally in your browser." />
-    <meta property="twitter:image" content="https://doc-scan-ai.netlify.app/og-image.png" />
+    <meta property="twitter:image" content="https://doc-scan-ai.netlify.app/og-image.jpg?v=2" />
 
-    <!-- WhatsApp uses Open Graph tags -->
+    <!-- WhatsApp also uses Open Graph -->
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   </head>
